--- a/aoc-2022.fsproj
+++ b/aoc-2022.fsproj
@@ -8,8 +8,7 @@
 
   <ItemGroup>
     <Compile Include="Program.fs" />
-    <Content Include="day1_demo.txt" />
-    <Content Include="day1.txt" />
+    <Content Include="data\*.txt" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
 </Project>
