--- a/aoc-2022.fsproj
+++ b/aoc-2022.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Utilities.fs" />
     <Compile Include="Program.fs" />
     <Content Include="data\*.txt" CopyToOutputDirectory="Always" />
   </ItemGroup>
